fix score spacing in main page summary table

--- a/static/less/base.less
+++ b/static/less/base.less
@@ -2084,6 +2084,9 @@ a:visited:hover {
     &.small {
         .padding(top, 0.25em);
     }
+    &.tiny {
+        .padding(top, 0.125em);
+    }
 }
 
 .space-bottom {
